--- a/mikuservConfig.json.template
+++ b/mikuservConfig.json.template
@@ -6,7 +6,7 @@
 
     "stravaClientSecret": "",
 
-    "sendgridApiKey": "",
+    "resendApiKey": "",
     "contactFormFromEmail": "",
     "contactFormToEmail": ""
 }
